sandc/test/fixtures/astRegression/shouldSucceed/productions/assignableExpression/AssignableExpression.sand
pub class AssignableExpression {
    foo() {
        x = y;

        x.x = y;
        x.x.x = y;

        x[x] = y;
        x[x][x] = y;

        x#x = y;
        x#x#x = y;

        #x = y;
        #x.x = y;
        #x[x] = y;
        #x#x = y;
        #x()#x = y;

        x().x = y;
        x()[x] = y;
        x()#x = y;

        x.x()[x].x()#x = y;
    }
}