sandc/test/fixtures/astRegression/shouldFail/productions/strPseudex/MtrPseudexInPlaceOfStrPseudex.sand
pub class MtrPseudexInPlaceOfStrPseudex {
    foo() {
        return ["foo"; 3];
    }
}